--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -1,14 +1,13 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
 
         <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
@@ -19,7 +18,6 @@
             android:layout_alignParentStart="true"
             tools:context="com.gppmds.tra.temremdioa.controller.UbsMapsActivity" />
 
-
         <LinearLayout
             android:id="@+id/viewB"
             android:layout_width="match_parent"
@@ -27,21 +25,20 @@
             android:layout_weight="0.4"
             android:orientation="horizontal">
 
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/card_view"
-                    android:layout_gravity="top"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="40dp"
                     card_view:cardCornerRadius="1dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
 
                     <TextView
                         android:id="@+id/textViewTitleUbs"
@@ -52,72 +49,70 @@
                         android:layout_marginTop="30dp"
                         android:textAlignment="center"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="22dp" />
+                        android:textSize="20dp" />
 
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_alignStart="@+id/textViewTitleUbs"
-                        android:layout_centerVertical="true"
-                        android:layout_column="0"
-                        android:layout_row="0"
-                        android:layout_rowSpan="2"
-                        android:layout_weight="0.05"
-                        android:background="@drawable/ic_place"
-                        android:adjustViewBounds="false" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/textViewDscEndereco"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_column="1"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_row="0"
-                        android:layout_toEndOf="@+id/imageView"
-                        android:layout_toRightOf="@+id/imageView"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        <ImageView
+                            android:id="@+id/imageView2"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="82dp"
+                            android:background="@drawable/ic_place"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentStart="true" />
 
-                    <TextView
-                        android:id="@+id/textViewDscBairro"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/textViewDscEndereco"
-                        android:layout_column="1"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_row="0"
-                        android:layout_toEndOf="@+id/imageView"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        <TextView
+                            android:id="@+id/textViewDscEndereco"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignBottom="@+id/imageView2"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_toEndOf="@+id/imageView2" />
 
-                    <TextView
-                        android:id="@+id/textViewCidadeUbs"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_column="1"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_row="0"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:layout_below="@+id/textViewDscBairro"
-                        android:layout_toEndOf="@+id/imageView" />
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="400dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/imageView2"
+                            android:background="@drawable/line_divider" />
 
-                    <!--<ImageView-->
-                        <!--android:id="@+id/image"-->
-                        <!--android:layout_width="48dp"-->
-                        <!--android:layout_height="48dp"-->
-                        <!--android:layout_alignStart="@+id/imageView"-->
-                        <!--android:layout_centerVertical="true"-->
-                        <!--android:layout_weight="10.05"-->
-                        <!--android:background="@drawable/ic_line_divider"-->
-                        <!--android:adjustViewBounds="false" />-->
+                        <TextView
+                            android:id="@+id/textViewDscBairro"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/imageView3"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_toEndOf="@+id/imageView2" />
 
+                        <ImageView
+                            android:id="@+id/imageView4"
+                            android:layout_width="400dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/textViewDscBairro"
+                            android:background="@drawable/line_divider" />
+
+                        <TextView
+                            android:id="@+id/textViewCidadeUbs"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/imageView4"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_toEndOf="@+id/imageView2" />
 
                     </RelativeLayout>
 
                 </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
