--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -57,13 +57,14 @@
 
                         <ImageView
                             android:id="@+id/imageView2"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginTop="82dp"
                             android:background="@drawable/ic_place"
                             android:layout_alignParentTop="true"
-                            android:layout_alignParentStart="true" />
+                            android:layout_alignParentStart="true"
+                            android:layout_marginStart="25dp" />
 
                         <TextView
                             android:id="@+id/textViewDscEndereco"
@@ -72,7 +73,8 @@
                             android:layout_alignBottom="@+id/imageView2"
                             android:layout_marginLeft="30dp"
                             android:layout_marginRight="10dp"
-                            android:layout_toEndOf="@+id/imageView2" />
+                            android:layout_toEndOf="@+id/imageView2"
+                            android:textSize="14dp"/>
 
                         <ImageView
                             android:id="@+id/imageView3"
@@ -89,7 +91,8 @@
                             android:layout_below="@+id/imageView3"
                             android:layout_marginLeft="30dp"
                             android:layout_marginRight="10dp"
-                            android:layout_toEndOf="@+id/imageView2" />
+                            android:layout_toEndOf="@+id/imageView2"
+                            android:textSize="14dp"/>
 
                         <ImageView
                             android:id="@+id/imageView4"
@@ -106,7 +109,8 @@
                             android:layout_below="@+id/imageView4"
                             android:layout_marginLeft="30dp"
                             android:layout_marginRight="10dp"
-                            android:layout_toEndOf="@+id/imageView2" />
+                            android:layout_toEndOf="@+id/imageView2"
+                            android:textSize="14dp"/>
 
                     </RelativeLayout>
 
