--- a/TemRemedioAi/app/src/main/res/layout/activity_select_remedio.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_select_remedio.xml
@@ -13,7 +13,7 @@
         android:padding="4dp">
 
         <TextView
-            android:id="@+id/textViewUBSSelecionada"
+            android:id="@+id/textViewSelectedUBS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="UBS Selecionada"
@@ -21,7 +21,7 @@
             android:layout_alignParentStart="true"/>
 
         <TextView
-            android:id="@+id/textViewQuantidadeLocais"
+            android:id="@+id/textViewMedicineQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quantidade de Locais"
