--- a/TemRemedioAi/app/src/main/res/layout/activity_select_ubs.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_select_ubs.xml
@@ -13,7 +13,7 @@
         android:padding="4dp">
 
         <TextView
-            android:id="@+id/textViewRemedioSelecionado"
+            android:id="@+id/textViewMedicineSelected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Remédio Selecionado"
@@ -21,7 +21,7 @@
             android:layout_alignParentStart="true"/>
 
         <TextView
-            android:id="@+id/textViewQuantidadeItens"
+            android:id="@+id/textViewUbsQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quantidade de Itens"
