--- a/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <AutoCompleteTextView
+                <EditText
                     android:id="@+id/log_in_password_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
