--- a/TemRemedioAi/app/src/main/res/menu/menu_main.xml
+++ b/TemRemedioAi/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,12 @@
     tools:context="com.gppmds.tra.temremdioa.controller.MainActivity">
 
     <item
+        android:id="@+id/action_login"
+        android:orderInCategory="100"
+        android:title="@string/action_login"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
