--- a/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.gppmds.tra.temremdioa.controller.LogInActivit">
 
     <ProgressBar
         android:id="@+id/log_in_progress_bar"
@@ -35,7 +38,9 @@
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:textColor="@color/colorPrimary"
+                android:backgroundTint="@color/colorPrimary"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -53,7 +58,9 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:textColor="@color/colorPrimary"
+                    android:backgroundTint="@color/colorPrimary"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -64,7 +71,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_log_in"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:backgroundTint="@color/colorPrimary"/>
 
             <Button
                 android:id="@+id/log_in_sign_in_button"
@@ -73,7 +82,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:backgroundTint="@color/colorPrimary"/>
 
         </LinearLayout>
     </ScrollView>
