--- a/TemRemedioAi/app/src/main/res/layout/activity_register.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_register.xml
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <AutoCompleteTextView
+                <EditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sexo"
-                android:id="@+id/textView"
+                android:id="@+id/textViewGenre"
                 android:backgroundTint="@color/colorPrimary"/>
 
             <RadioGroup
@@ -100,7 +100,7 @@
 
                 <EditText
                     android:id="@+id/ageText"
-                    android:layout_width="60dp"
+                    android:layout_width="75dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_age"
                     android:inputType="numberDecimal"
