--- a/TemRemedioAi/app/src/main/res/layout/activity_select_remedio.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_select_remedio.xml
@@ -16,7 +16,7 @@
             android:id="@+id/textViewSelectedUBS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="UBS Selecionada"
+            android:text="@string/selectedUBS"
             android:textSize="14sp"
             android:layout_alignParentStart="true"/>
 
@@ -24,7 +24,7 @@
             android:id="@+id/textViewMedicineQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quantidade de Locais"
+            android:text="@string/ubsQuantity"
             android:textSize="10sp"
             android:layout_alignParentEnd="true"/>
 
