--- a/TemRemedioAi/app/src/main/res/layout/card_list_ubs.xml
+++ b/TemRemedioAi/app/src/main/res/layout/card_list_ubs.xml
@@ -8,7 +8,8 @@
     android:layout_marginBottom="1dp"
     android:layout_width="match_parent"
     app:cardElevation="1dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/card_view_ubs">
 
     <RelativeLayout
         android:layout_width="wrap_content"
